--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,12 @@ button {
 div.padBottom {
   padding-bottom: 5rem;
 }
+
+.characterModal .modal-content {
+  background-color: #282c34;
+}
+
+.characterFrame {
+  width: 100%;
+  height: 50rem;
+}
